--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>JS training</title>
+  <title>JS Training</title>
 </head>
 <body>
-
-  <div id="score">Score : 0</div>
+<h1>Shooter Infinite <span>(wip)</span></h1>
+<div id="score">Score : 0</div>
+<div id="gameWrapper">
   <div id="gameArea">
     <div id="player"></div>
   </div>
   <div id="controls">
     <button id="moveLeft">⬅️</button>
-    <button id="moveRight">➡️</button>
     <button id="shoot">🔥</button>
+    <button id="moveRight">➡️</button>
   </div>
-  <script src="script.js"></script>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
