--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
   <div id="gameArea">
     <div id="player"></div>
   </div>
-  <div id="controls">
-    <button id="moveLeft">⬅️</button>
-    <button id="shoot">🔥</button>
-    <button id="moveRight">➡️</button>
-  </div>
 </div>
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
